[gd_scene load_steps=6 format=4 uid="uid://cpp24mrobjb1u"]

[ext_resource type="Script" uid="uid://dv24s08ak3jh0" path="res://Scripts/balon.gd" id="1_uuwyi"]

[sub_resource type="SphereShape3D" id="SphereShape3D_jjgbg"]

[sub_resource type="SphereMesh" id="SphereMesh_07liu"]
lightmap_size_hint = Vector2i(17, 9)

[sub_resource type="AudioStreamWAV" id="AudioStreamWAV_uuwyi"]
data = PackedByteArray("AQEB//////////////////8BAQEB//////////////////8BAgEB//////////////////8CAgEB//////////////////8DAgEB//////////////////8EAgEB//////////////////8FAwEB//////////////////8GAwH//////////////////wEGAwH//////////////////wMFAgH//////////////////wYFAgH//////////////////wgEAgH//////v7+/v7+/v7+AQkEAf////7+/v7+/v7+/v7+BQgDAf///v7+/v7+/v7+/v7+CAcDAf///v7+/v7+/v7+/v7+CwYCAf/+/v7+/v7+/v7+/v4BCwUC///+/v7+/v7+/v7+/v4GCgQB//7+/v7+/v7+/v7+/v4KCAMB//7+/v7+/v7+/v7+/v4OBwMB//7+/v7+/v7+/v7+/gIOBgL//v7+/v7+/v7+/v7+/gcMBQL//v7+/v7+/v7+/v7+/gwKBAH//v7+/v79/f39/f39/RAIAwH+/v7+/f39/f39/f39AhEHAv/+/v79/f39/f39/f39CA4GAv/+/v39/f39/f39/f39EAsEAf7+/f39/f39/f39/f0CEwgD//79/f39/f39/f39/f0MDgYB//79/f39/f39/f39/f0UCgQB/v39/f39/f39/f39/QYTCAL//v39/f39/f39/f39/RAOBQH+/f39/f39/f39/f39/RkKA//+/f39/f39/f39/f39CxMHAv/9/f39/f38/Pz8/Pz8FQ4FAf79/f38/Pz8/Pz8/PwCGAoD//79/fz8/Pz8/Pz8/PwPEgcC/v39/Pz8/Pz8/Pz8/PwaDQUB/v38/Pz8/Pz8/Pz8/AgYCQP//f38/Pz8/Pz8/Pz8/BQRBwH+/fz8/Pz8/Pz8/Pz8/B8NBP/9/fz8/Pz8/Pz8/Pz8DRcJAv79/Pz8/Pz8/Pz8/Pz8GhEGAf79/Pz8/Pz8/Pz8/PwIGwsD//38/Pz8/Pz8/Pz8/PwbEQYB/vz8/Pz8/Pv7+/v7+wkcCwP//fz8/Pv7+/v7+/v7+xwSBwH+/Pz8+/v7+/v7+/v7CR0MA//9/Pz7+/v7+/v7+/v7HRMHAf38/Pv7+/v7+/v7+/sKHgwD/v38+/v7+/v7+/v7+/seFAcB/fz7+/v7+/v7+/v7+wofDAT+/fz7+/v7+/v7+/v7+yAVBwH9/Pv7+/v7+/v7+/v7CiENBP78/Pv7+/v7+/v7+/v7IRUIAf38+/v7+/v7+/v7+/sLIg0E/vz7+/v7+/v7+vr6+voiFggB/fz7+/v6+vr6+vr6+gsjDgT+/Pv7+/r6+vr6+vr6+iMXCAH9/Pv7+vr6+vr6+vr6CyQOBP78+/v6+vr6+vr6+vr6KRUHAf37+/r6+vr6+vr6+voaHgsD/fz7+vr6+vr6+vr6+gQqEQX//Pv6+vr6+vr6+vr6+iYZCQH9+/r6+vr6+vr6+vr6FCMNA/78+/r6+vr6+vr6+vr6MRQG//z7+vr6+vr6+vr6+voiHQsC/fv6+vr6+vn5+fn5+Q0pEAT+/Pr6+vr5+fn5+fn5+S8YCAH8+/r6+fn5+fn5+fn5HSINA/37+vr5+fn5+fn5+fkEMBMG//z6+vn5+fn5+fn5+fkrHAoB/Pv6+fn5+fn5+fn5+RYnDwT++/r5+fn5+fn5+fn5+TcWB//8+vn5+fn5+fn5+fn5JiAMAv37+vn5+fn5+fn5+fkOLhIF/vv6+fn5+fn5+fn5+fk0GgkB/Pr5+fn5+fn5+fn5+SAmDgP9+/n5+fj4+Pj4+Pj4Dy8TBf77+vn5+Pj4+Pj4+Pj4PBgI//v6+fn4+Pj4+Pj4+PgwHwsB/Pr5+fj4+Pj4+Pj4+CInDwP9+vn5+Pj4+Pj4+Pj4DzITBf77+fn4+Pj4+Pj4+Pj4PxkI//v5+fj4+Pj4+Pj4+PgyIQsB/Pr5+Pj4+Pj4+Pj4+CMpDwP9+vn4+Pj4+Pj4+Pj4EDQUBv76+fj4+Pj4+Pj4+Pj4QhoI//v5+Pj4+Pj4+Pj4+Pg1IgwB/Pn4+Pj4+Pf39/f39yUrEAP9+vn4+Pf39/f39/f3ETcVBv76+fj49/f39/f39/f3RBwJ//v5+Pj39/f39/f39/c3IwwB+/n4+Pf39/f39/f39yYtEQT8+vj49/f39/f39/f3EjkWBv36+Pj39/f39/f39/f3Rx0J//v59/f39/f39/f39/dBIQsB+/n49/f39/f39/f39zolDQH7+fj39/f39/f39/f3MioPAvz5+Pf39/f39/f39vYpMBIE/Pn49/f39vb29vb29h42FAX9+fj39/b29vb29vb2Ez0YBv36+Pf39vb29vb29vYGRRsI/vr49/f29vb29vb29vZNHwr/+vj39vb29vb29vb29kYjDAH6+Pf29vb29vb29vb2PygOAvv49/b29vb29vb29vY2LhAD+/j39vb29vb29vb29iw0EwT8+ff29vb29vb29vb2IToWBfz59/b29vb29vb29vYUQhkH/fn39vb29vb29vb29gZKHQj++ff29vb29fX19fX19VMhCv/69/b29vX19fX19fX1TCYMAfr49vb29fX19fX19fVDKw8C+/j29vX19fX19fX19UQsDwL6+Pb29fX19fX19fX1RCwPAvr39vX19fX19fX19fVFLA8C+vf29fX19fX19fX19UUsDwL69/b19fX19fX19fX1RSwPAvr39vX19fX19fX19fVFLA8C+vf29fX19fX19fX19UUsDwL69/b19fX19fX19fX1RSwPAvr39vX19fX19fX19fVFLA8C+vf29fX19fX19fX19UUsDwL69/b19fX19fX19fX1RSwPAvr39vX19fX19fX19fVFLA8C+vf29fX19fX19fX19UUsDwL69/b19fX19fX19fX1RSwPAvr39vX19fX19fX19fVFLA8C+vf29fX19fX19fX19UUsDwL69/b19fX19fX19fX1RSwPAvr39vX19fX19fX19fVFLA8C+vf29fX19fX19fX09U4nDf/69/b19fX19fX19fX1VyML/vn39vX19fX19fX19QZOHwn++ff29fX19fX19fX1FUYbB/359/b19fX19fX19fUjPhcF/Pj29vX19fX19fX19S84FAT7+Pb19fX19fX19fX1OzISA/v49vX19fX19fX19fVFLA8C+vf29fX19fX19fX19U4nDf/69/b19fX19fX19fX1VyML/vn39vX19fX19fX19QZOHwn++ff29fX19fX19fX1FUYbB/359/b19fX19fX19fUjPhcF/Pj29vX19fX19fX19S84FAT7+Pb19fX19fX19fX1OzISA/v49vX19fX19fX19fVFLA8C+vf29fX19fX19fX19U4nDf/69/b19fX19fX19fX1VyML/vn39vX19fX19fX19QZOHwn++ff29fX09fX19fX1Iz4XBfz49vX19fX19fX19fU6MRED+/j29fX19fX19fX19UwmDP/69/b19fX19fX19fUGSx0I/vn39vb19fX19fX19SE7FgX8+Pf29vb19fX19fX1Ny4QAvv49/b29vb29vb29vZIJAz/+vj39vb29vb29vb2BkYcCP75+Pf29vb29vb29vYfNxUF/Pn39/b29vb29vb29jMrDwL7+ff39vb29vb29vb2QyIL//v49/f39vb29vb29gVCGgf++vj39/f39/f39/f3HTQTBf35+Pf39/f39/f39/cwKA4C/Pn49/f39/f39/f39z4fCv/7+fj39/f39/f39/cFPRgH/vr5+Pf39/f39/f39xswEgT9+vj4+Pf39/f39/f3LCUNAvz6+Pj4+Pj4+Pj4+Pg6HQn/+/n4+Pj4+Pj4+Pj4DzITBf36+fj4+Pj4+Pj4+PgqIwwC/Pr5+Pj4+Pj4+Pj4+DwYB//7+fn4+Pj4+Pj4+PgYKhAE/fr5+fj4+Pj4+Pj4+C4dCgH8+vn5+fj4+Pj4+PgEMhQG/vv6+fn5+fn5+fn5+R4jDQP9+/r5+fn5+fn5+fn5MBgI//z6+vn5+fn5+fn5+Q0qEAT++/r5+fn5+fn5+fn5Ix0KAv37+vr5+fn5+fn5+fkyFAb//Pv6+vn5+fn5+fn5FCMNA/37+vr6+vr6+vr6+vomGAgB/fv6+vr6+vr6+vr6AykQBf78+/r6+vr6+vr6+voYHQsC/fz7+vr6+vr6+vr6+icUBv/9+/v6+vr6+vr6+voKIg0E/vz7+/v6+vr6+vr6+hwXCAH9/Pv7+/v7+/v7+/v7JxAF//38+/v7+/v6+/v7+xUZCQL+/Pv7+/v7+/v7+/v7JQ8F//38+/v7+/v7+/v7+xQXCAL+/Pz7+/v7+/v7+/v7Ig4E//38/Pv7+/v7+/v7+xIVCAL+/fz8/Pv7+/v7+/v8IA0E//38/Pz8/Pz8/Pz8/BEUBwL+/fz8/Pz8/Pz8/Pz8HQwE//39/Pz8/Pz8/Pz8/A8SBwL+/f38/Pz8/Pz8/Pz8GwsD//79/fz8/Pz8/Pz8/A4QBgH+/f39/Pz8/Pz8/Pz8GAoD//79/f39/f39/f39/Q0PBgH+/f39/f39/f39/f39FgkD//79/f39/f39/f39/QsNBQH//v39/f39/f39/f39EwgD//7+/f39/f39/f39/QoLBAH//v79/f39/f39/f39EAcC//7+/v7+/v7+/v7+/ggKBAH//v7+/v7+/v7+/v7+DgYC//7+/v7+/v7+/v7+/gkHAwH//v7+/v7+/v7+/v4DCQQB///+/v7+/v7+/v7+/gkFAv////7+/v7+/v7+/v4FBgIB////////////////AQcDAf////////////////8FAwEB////////////////AgQCAf////////////////8EAgH/////////////////AgIBAf///////////////wEBAQH///////8B")

[sub_resource type="AudioStreamWAV" id="AudioStreamWAV_07liu"]
data = PackedByteArray("Bx0M6vPN7u8cIjD4DeXHsa61CfL0HgUVGgXs2ZvrAcFBGfsZAibX/d+5v+oKMS5P+/Dfwszy7hws+RHozLGvtfIG3SftGQgq7/W3qAPx2EkZ+xkGKtj26Le05/8qIEkw5PbIydj37xYH+uvbzbKvtecaxyX9FhMiBe3io9AU0gVR/BcVBibY/+i2rub8KCEyEebOur7J6vkDGfv94tnEsq+25xrSIwkFGREf6PmwqfcIwi418yQHDx3YCem2rt3yICstG+/WFBDjQCTuEw/6/97YwLStt90Z3RYT7BsMO/fq2qe6F+7lNiLuLQMGHdkE6bSzyOwEPyMuB+fOJvr8RBHwDPDt68jaxbKws7wKCOkk6AUeCTHw7tGluwv4zi00+B8Z8y3+6QfOubDX7w46IisH6s4gDeQ6LQklBQMM3tDXvbSvtsgWCPQj8/wbCEIB4uyysOEL1Ps+EPMwEPQpCOoH17exye38PCUyHff68i4YDD4aCSkL/w/ny9vGs7OyvOgb8xUk3gUdDEH93+i5qcsQ+OUkMwYWKPkGHPX7B8a2srzs+S00Ly0C++8LMgYjOfoGIP7/DOfR3dGyta+5vwsd6R8S1Q8dFEAG3+25rMH/AuASPA/9LyD0Bhj18gnPtra16vAfQiY0Ctr2zfwy/Cs5+gQdCf4M89vY2r+1s7G8vxcc4B8R1QYdC0Ae4+vLt7bBEALZEjMP+CYj8PQcEOIN7ra6r73u8CZBJjQP2u3T5CggEy0e+hIfAQEO6Nzb28C0tbG5wPMc/RQf89YYHBc/HuDkzLuywvUC5wcSKQ8FLh/s9BgQ9AwFt7i0sN3w+UA8KjP42uvN3SwxCyop+gIfHA4SDPrm3ty5tbayuMHVGxz/HhjW5hocIz4a4ODVvLLD2AcC7RIqFw8RLh/s7BsQ7AwKybi6sbju8AtANikz/tvp1M4eMA4qLwz67PL46OXx+urf38K2uLO0wML2GxIKHg/X3hocHT496+Hnvb25xOACAvgSIhcPEi0p9e0GEBAFDAjBubmzs+jx9z8/MTIy5Nvnz8/zAfr6+gP68/Ly8eXm9vrs39/Et7m0tLzDwxkbCB0d+9jYGhsZPT0I4eHKvrnFxeYCAgMRERcPDi0sEe3tCxAQDQwKurq4tLTL8fEUPj4xMTHl3PMKCgU7Ow76/P368vLy8ubm9Pr23+DZuLi4tra/xMQPGxETHRXY2PAbGyQ8PAfi4tC/v8LGxvoCAgcRGQ8PEiwsJO3t8hAQBwwM+bu7urW1vfHx+D09ODExIN3d8woKHDo6IPr6/fv79vPz8Ovr+v//6ODgw7q6uLe3w8XFBhoaHB0d6tnZAxsbLzs7DOPjzsDAxcfHzAICBBERCf4ODiQrKwXu7vcPDx4MDAS+vLy1t7fJ8vICPDw/NDAw9efnAxMTJjk5Ivr6+vv7+vPz8+vr6/3//+zh4c+7u7q4uLnGxsYGGhokHBwC2traExoaODo6IePj3L7CwsnIyNECAgwZERH3Dg4dKioq/e7u6A8PDyMMDOm+vr61uLjC8vLyMjs7Qi8vL/Ho6O8TEyE4ODj/+vr2+/sB8/Pzz7+/u9LS0uni4s28vLy5urq/x8fIBxoaNRwcE9nb2+0aGiFFOTkw5OTkusPDys7JycYCAgIvERH5/g4OLyoqKgHv7+jxDw8lEwwM4r+/v7a6urvU8vL4MTo6QjYuLhno6OjLyMjI6Ozs/Pr6+vT7+wP09PTZwMDAw9PT5Obi4tC+vr65vLy8xcnJywcZGT0kGxvw3Nzc7xkZGUY4ODUD5eXWt8TEy9LLy8PlAgIeJxAQ+fcODiM0KSkd+e/v5fEPDx0xCwsEy8HBwbW8vLzE7fPzETM4OEM5LS0h9unp3MnJycvt8vIKBAEB8fn7+wj39PTkxcLCs8/U1O/n4+PSwsDAvLu9vb/HysrN7BkZGU0bGxvf3d3d4RIZGTM/NjYwCuXl5bDGxsbZ0czMxdQCAgJDEBAQ4/8ODiI+KCgoDvPw8OPrDw8PRhMLC+3Lw8PDtry9vsHX8/PzIjI3Nz9ELCwsEOrq6tXKy8vM2/Ly8hUBAQHv9/z8A//m5ua+tbW1r8bW1uD85OTk0MXCwsC8v7+/xMrMzM/cGBgYSzMaGgrY3t7e4vcYGBhLOjU1LBjm5ua9ucjIyODVzs7Ju/kCAiVBEBAQ5OoNDQ1DNScnIwr68PDt2PkODhVEGQsL/NHIxcXCuL7AwMLH6fT0/yEwNTU6SjYrKycM7+vr3svNzc3P2uXl5fr08vLw6vz8/AYF5+fnyr24uLiwyNfX3AHv5eXiy8bExMK9wMLCw8bNzs7R1Q8YGDBZKRkZCtne39/h5QsYGCRJPjMzMx4K5+fnubjKysrc4tDQ0Me+8QICE0YyDw8P3+UNDQ00QS0mJh8KAfHx8dzZDg4OKEImCwsL09PIx8fCu73CwsLIye/09AUgJTQ0NEJHNSkpKQz/6+vr1M3Pz8/Q0d3d3eLq6uvr6+v0/Pz8DAXo6OjRw7u6uriyxdnZ2fv95ubm2s3IxsbFv8HExMTHyc7Q0NHX5xcXFz5WMBkZGdvb4ODg4+b4FxcXO0c5MjIyHR3v6OjctbjMzMzY493S0tLFwOEDAwM8RCMPDw/Z2f8NDRM/PyskJCEKCvjy8u/b2/oODg4/PyULCwvc1c/Jycm/vsDFxcXKzNH19fULHx8tMjI0RUU2KCgoDwv07Ozpzs7R0dHR09bf39/l6/cNDQ0hLSUdHR0SDvbp6enKxsC9vb22tdHb29sBAfHo6OjSz8vJycnDwsXHx8fKy87S0tLW2egWFhY0UlIfGBgQ3Nzg4uLi5+j5FhYWM0REMDAwKxwc/Orq6r+5u8/Pz9fk5NrU1NTFw8sDAwMaQUEoDw8P6NvbBgwMEjw8NiMjIxYKCv7z8/Pi3d36DQ0NNz09FwoKCtfX183MzMvBwcHHx8fJzs7T9vb2BR4eHi4wMDJCQkIqJiYjCwsMDQ0NDg8P8vLy7tXV2+Hh4ejs7AwMDBArKyQcHBwTDQ3v6urqyMjIwcHBv7m5y9zd3fMBAe/p6enV0tLMzMzMxcXGysrKy87Oz9TU1Nbb2+kVFRUrTk5BFxcXAt7e4OTk5Obp6e4VFRUgQEBAMC0tLRoaGvzr6+vIvLzH0dHR3ubm5NbW1tLHx8fsAwMDLz4+Mg4ODvvd3d0BDAwMNDk5MyEhIRgJCQn78/Pz5N/f3wcNDQ06Ojo0CgoK/dnZ2dXPz8/KxMTEx8vLy87R0dHk9vb2Ch0dHSctLS04Pj4+LiQkJBQLCwsMDAwNDg4L8vLy79jY2AUMDAw4Pj45NDMzLikpJxsbGxkNDQ347Ozs2MzMy8TExMO9vb3O39/f7wEBAe3q6urX1dXTz8/PzcnJycvNzc3P0dHR1dfX19vd3d0HFBQUPUpKShwWFhbn4ODg5eXl5erq6uoPFBQUOD09PTIrKysgGRkZA+zs7NbAwMDF1NTU2ejo6OjZ2dnZysrKyu0DAwMmOjo6NQ0NDQ3f39/f+gsLCyE2NjY2ICAgIAwJCQkC9PT07+Dg4OD7DAwMIjc3NzcVCgoK7Nvb29vT0dHRysfHx8fMzc3N0tPT09Pu9/f3DhsbGxsnKysrNjw8PDwsIyMjFwoKCgsMDAwMDg4OB/Pz8/Da2tra4+Tk5Ozv7+8BDAwMGicnJyYaGhoaDAwMDPjt7e3dzs7OzcfHx8fAwMDA0ODg4OwBAQEB7uvr69vW1tbW0NHR0cvLy8vMz8/Pz9LS0tLV2NjY2t7e3t7yFBQUGkhISEg1FRUVD+Hh4eHj5ubm5uvr6+vwFBQUFDY7Ozs7LioqKiEZGRkZCO3t7efCwsLCwtXV1dXj6Ojo6OHa2trWy8vLy8v7AwMDJTk5OTkuDQ0NDeDg4ODg9QsLCxY1NTU1NScfHx8XCQkJCQn89fX17eHh4eHh+wwMDBw2NjY2NiAKCgr+3Nzc3NzZ09PT0cnJycnJyc7Pz8/S1dXV1dXq9/f3BRsbGxsbHSsrKys4Ojo6OjorIiIiGQoKCgoLDAwMDA0ODg4O9/T09Ofb29vb3uTk5OTt7e3t7QcKCgoYJycnJiMZGRkZDgwMDAz87e3t6c/Pz8/PysjIyMbBwcHBwd3h4eHxAQEBAQHu7Ozs4tfX19jY09LS0s/MzMzMzM/Q0NDS1NTU1NTX2tra2t/f39/f7BMTExNARkZGRkYhFRUVAuLi4uLi5Ofn5+fs7Ozs7OwKExMTIjo6Ojo6OCkpKSkcGBgYGBgI7e3t7sTExMTExM3X19fZ6enp6enp4tvb29vNzc3Nzc3oAwMDAzg4ODg4OCgNDQ0N5+Hh4eHh5gsLCwslNDQ0NDQ0JB4eHhkJCQkJCQkE9fX19efi4uLi4uL8DAwMETQ0NDQ0NDQPCQkJ+N7e3t7e3tvU1NTUzcvLy8vLy8zQ0NDQ1dbW1tbW1t74+Pj4EhoaGhoaGhwpKSkpMzk5OTk5OTknISEhHAoKCgoKCgwMDAwNDQ0NDQ0J6Ojo6NHDw8PDw8jY2NjY6O3u7u7u9AoKCgofJiYmJiYkGRkZGREMDAwMDAzy7u7u59HR0dHR0c3KysrKxMTExMTEy+Li4uL1AgICAgIC8u3t7erZ2dnZ2dnY1NTU1NHOzs7Ozs7Q0tLS0tXV1dXV1tbZ29vb2+Hh4eHh4eH/ExMTE0REREREREQmFBQUFOPk5OTk5OTm6Ojo6Ozt7e3t7e32ExMTEyo4ODg4ODg4LCgoKCYXFxcXFxcXCO7u7u7QxsbGxsbGxtHY2NjY6urq6urq6urd3d3d18/Pz8/Pz8/VAwMDAx02NjY2NjY2MQ0NDQ384+Pj4+Pj4+MGCwsLEDIyMjIyMjIyJR4eHh4LCQkJCQkJCQT29vb27eTk5OTk5OTk/AwMDAwuMzMzMzMzMzMJCQkJ/t/f39/f39/f3dbW1tbRzc3Nzc3Nzc3O0tLS0tXY2NjY2NjY2Nz4+Pj4BRoaGhoaGhoaGiUoKCgoNzc3Nzc3Nzc3LiAgICASCgoKCgoKCgsMDAwMDQ0NDQ0NDQTp6enp18bGxsbGxsbQ2tra2unu7u7u7u7uAwoKCgokJCQkJCQkJCUlJSUlJiYmJiYmJiYH/Pz8/NjT09PT09PT0MzMzMzIxsbGxsbGxs3j4+Pj7gICAgICAgIC8u7u7u7d29vb29vb29rV1dbW1NDQ0NDQ0NDQ0tTU1NTW19fX19fX19fa3d3d3eDi4uLi4uLi4voSEhISMEJCQkJCQkJCMBQUFBT85eXl5eXl5eXl6enp6eru7u7u7u7u7u4FEhISEi02NjY2NjY2NjYnJiYmJRcXFxcXFxcXFw3v7+/v4cnJycnJycnJyc3a2tra3uvr6+vr6+vr6+re3t7e3dHR0dHR0dHR0dH8AwMDAy40NDQ0NDQ0NDQlDAwMDP3k5OTk5OTk5OTk/AsLCwsiMTExMTExMTExMB8dHR0dCwkJCQkJCQkJCQn79vb29unl5eXl5eXl5eXl/AsLCwsjMTExMTExMTExMScJCQkJ/uHh4eHh4eHh4eHh3NjY2NjTz8/Pz8/Pz8/Pz8/S1NTU1Nja2tra2tra2tra2un5+fn5CRkZGRkZGRkZGRkZGicnJycnNTU1NTU1NTU1NTU1Jx8fHx8UCgoKCgoKCgoKCwsLCwsMDQ0NDQ0NDQ0N7urq6urRyMjIyMjIyMjI3uXl5eX3AwMDAwMDAwMDCxMTExMZIyMjIyMjIyMjIyQkJCQkJCUlJSQkJCQkJBb8/Pz88tXV1dXV1dXV1dXSz8/Pz83JycnJycnJycnJ1+Xl5eXvAgICAgICAgICAvrv7+/v6t3d3d3d3d3d3d3d2NjY2NjU09PT09PT09PT09TW1tbW19nZ2dnZ2dnZ2tra3N/f39/g5OTk5OTk5OTk5OT6EhISEh0/Pz8/Pz8/Pz8/PzkTExMTE+zm5ubm5ubm5ubm5unr6+vr7O/v7+/v7+/v7+/v7w4SEhISJzQ0NDQ0NDQ0NDQ0NCklJSUlHRYWFhYWFhYWFhYWFgTw8PDw58zMzMzMzMzMzMzMzMza3Nzc3Obs7Ozs7Ozs7Ozs7Ozr4ODg4ODV1NTU1NTU1NTU1NTU1PwDAwMDIDIyMjIyMjIyMjIyMjIjDAwMDAzm5ubm5ubm5ubm5ubm5vwKCgoKEy4uLi4uLi4uLi4uLi4uJxsbGxsbCAgICAgICAgICAgICAgI+/f39/fx5+fn5+fn5+fn5+fn5+fnAgsLCwsYLi4uLi4uLi4uLi4uLi4uIAkJCQkJ4+Pj4+Pj4+Pj4+Pj4+Pj497a2tra2dLS0tLS0tLS0tLS0tLS0tLT19fX19fb3Nzc3Nzc3Nzc3Nzc3Nzc3Of5+fn5+RgYGBgYGBgYFxcXFxcXFxcXGSMlJSUlLTIyMjIyMjIyMjIyMjIyMjIyLR4eHh4eDgkJCQkJCQkJCQkJCQoLCwsLCwwMDAwMDAwMDAwMDAzv6+zs7ODMzMzMzMzMzMzMzMzM4Ofn5+fuAwMDAwMDAwMDAwMDAwcSEhISEh0hISEhISEhISEhISEhISIiIiIiIyMjIiIiIiIiIiIiIiIaDQ0NDQ359vb29vb29vb29vb29vbk4eHh4drMzMzMzMzMzc3Nzc3Nzc3n5+fn5/QCAgICAgICAgICAgICAgL28PDw8PDf39/f39/f39/f39/f39/f29ra2trZ1tbW1tbW1tbW1tbW1tbW1tjZ2dnZ2dzc3Nzc3Nzc3Nzc3Nzc3Nzc4OHh4eHi5ubm5ubm5ubm5ubm5ubm5uYBERERERE7Ozs7Ozs7Ozs7Ozs7Ozs7OzscEhISEg3o6Ojo6Ojo6Ojo6Ojo6Ojo6Ojq7Ozs7Ozv8PDw8PDw8PDw8PDw8PDw8PDw/BERERERKTExMTAwMDAwMDAwMDAwMDAwMDArIiIiIiIYFRUVFRUVFRUVFRUUFBQUFBQUFBT+8fHx8fHU0NDQ0NDQ0NDQ0NDQ0NDQ0NDQ0NDT39/f39/m7u7u7u7u7u7u7u7u7u7u7u7u7u7u7ufj4+Pj49nX19fX19fX19fX19fX19fX19fX19fX4gMDAwMDGS4uLi4uLi4uLi4uLi4uLi4uLi4uLi4uLh0LCwsLC/Do6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo9AoKCgoKHysrKysrKysrKysrKysrKysrKysrKysrKysrKyAZGRkZGQwICAgICAgICAgICAgICAgICAgICAgICAgICAgI//j4+Pj47unp6enp6enp6enp6enp6enp6enp6enp6enp6enp6fECCgoKChInKysrKysrKysrKysrKysrKysrKysrKysrKysrKysrKysiCAgICAj65eXl5eXl5eXl5eXl5eXl5eXl5eXl5eXl5eXl5eXl5eXl5eXl4d7e3t7e2dbW1tbW1tbW1tbW1tbW1tbW1tbW1tbW1tbW1tbW1tbW1tbW1tbW1tfa29vb29zf39/f39/f4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4ODg4Or0+vr6+gUPFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhcdISEhISMpLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLS0tLSsbGxsbGxgJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkKCgoKCgoLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLBO7u7u7u6tHR0dHR0dHR0dHR0dHR0dHR0dHR0dHS0tLS2+rq6urq8AMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMPEBAQEBAaHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHxMMDAwMDAL39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f17e3t7e3t4uLi4+Pj4+Pj4+Pj4+Pj4+Pj4+Pj4+Pj4+Pj4+Pj4+Pj4+Pj5fLy8vLy8v8CAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgL38vLy8vLs4+Pj4+Pj4+Pj4+Pj4+Pj4+Pj4+Pj4+Pj4+Pj4+Pj4+Pj4+Pj4+Pj4+Pj4+Lf39/f39/b29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb29vb29vc3t7e3t7e4OHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4eHh4ePl5eXl5ebp6enp6enp6enp6enp6enp6enp6urq6urq6urq6urq6urq6urq6urq6urq6urq6urq6urq6urq6urq6urq6uruBg8PDw8PITMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMzMmFBAQEBAQ9Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozs7Ozt7+/v7+/v8fPz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/P6AQgPDw8PFR8pKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSkpKSgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSUlJSQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyMjIyAXEQsLCwsI/vj18vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vPz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8vHw8PDw8PDu7u3t7e3t7e3t7e3t7e3t7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u71CAwMDAwMEx0kKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCcnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJycnJyYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiYmJiIKCgoKCgoG/u3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7uzr6+vr6+vq6ejo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojo6Ojp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6enp6eno5+fn5+fn5+bl5eXl5eXl5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ubm5ufn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fp6urq6urq6uzt7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3t7e3u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7u7vb39/f39/f3/gECAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgL9+Pj4+Pj4+PX07+/w8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDz+Pj4+Pj4+PgBAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgL8+fn5+fn5+fny8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8fHx8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vLy8vDw8fHx8fHx8O/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/w8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8fHx8fHx8fHx8vLy8vLy8vLy8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/P19fX19fX19fX39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/j4+Pj4+Pj4+Pj4+Pj4+Pj4+Pj4+Pj4+Pj4+Pj4+Pj4+Pj4+Pj4BwcHBwcHBwcHEBYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhYWFhUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVFRUVBwcHBwcHBwcH//n5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fn5+fr6+vr6+vr6+vv7/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8BgYGBgYGBgYGCA8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDw8PDAsLCwsLCwsLCwcHBwcHBwcHBwcHBwcHBwcHBwcHBwcHBwcHBwcHBwcHBwcHBwcHBwcHBwcHBwcHBwcHBwcHBwcHBwcHBwcHBwcHBwcHBwcGBgYGBgYGBgYGBgYGBgYGBgYGBgYGBgYGBgYGBgYGBgYGBgYGBgYGBgYGBgYGBgYGBgYGBgYGBgYGBgYGBgYGBgYGBvz8/Pz8/Pz8/Pzz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/T09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09PT09fj4+Pj4+Pj4+Pn8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz5+fn5+fn5+fn59/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39wICAgICAgICAgIJCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCwsLCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgQDAwMDAwMDAwP/+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v7+/v8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8/Pz8AgMDAwMDAwMDAwYJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQkJCQgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgFBQUFBQUFBQUFBAICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgIB//////////////38/Pz8/Pz8/Pz8/Pz9/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f39/f4BAgICAgICAgICAgYGBgYGBgYGBgYGBgYGBgYGBgYGBgYGBgYGBgYFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMCAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAgICAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEBAQEB////////////////////////////////////////////////////////////////////////////////////////////////////////AQ==")

[node name="Balon" type="Area3D"]
script = ExtResource("1_uuwyi")

[node name="Collision" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_jjgbg")

[node name="KulaMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_07liu")
skeleton = NodePath("../Balon")

[node name="BlowSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamWAV_uuwyi")
volume_db = -8.587
pitch_scale = 0.3

[node name="PopSFX" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamWAV_07liu")
volume_db = -3.817

[connection signal="input_event" from="." to="." method="_on_input_event"]
